--- a/views/campgrounds/map.ejs
+++ b/views/campgrounds/map.ejs
@@ -4,6 +4,6 @@
 <div id="cluster-map"></div>
 <script>
   const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
-  const campgrounds = {features: <%- JSON.stringify(campgrounds) %>};
+  campgrounds = {features: <%- JSON.stringify(campgrounds) %>};
 </script>
 <script src="/javascripts/clusterMap.js"></script>
