--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -70,6 +70,26 @@
               </div>
             </div>
 
+            <!-- Tag -->
+            <div class="mb-3">
+              <label class="form-label" for="tag">Select a type!</label>
+              <select
+                class="form-select"
+                aria-label="Select a tag!"
+                id="tag"
+                name="campground[tag]"
+                required
+              >
+                <option value="dune">Dune</option>
+                <option value="Sea">Sea</option>
+                <option value="forest">Forest</option>
+                <option value="jungle">Jungle</option>
+                <option value="mountain">Mountain</option>
+                <option value="space">Space</option>
+              </select>
+              <div class="valid-feedback">Looks good!</div>
+            </div>
+
             <!-- Upload Images -->
             <div class="mb-3">
               <label class="form-label" for="image">Upload Images</label>
